"Parcel Details" dialog update Files modified - [_viewForm,ViewProject,_viewInspection]

--- a/src/main/webapp/pages/_viewInspection/_viewInspection.html
+++ b/src/main/webapp/pages/_viewInspection/_viewInspection.html
@@ -339,20 +339,21 @@
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.subdivisions.subdivision" name="label19"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow70">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn145">
-                        <wm-label padding="unset 0.5em" name="label36" caption="Lot"></wm-label>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn146">
-                        <wm-label padding="unset 0.5em" name="label46" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.lot"></wm-label>
-                    </wm-gridcolumn>
-                </wm-gridrow>
+
                 <wm-gridrow name="gridrow71">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn147">
                         <wm-label padding="unset 0.5em" name="label37" caption="Section"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn148">
                         <wm-label padding="unset 0.5em" name="label47" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.section"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow70">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn145">
+                        <wm-label padding="unset 0.5em" name="label36" caption="Lot"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn146">
+                        <wm-label padding="unset 0.5em" name="label46" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.lot"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow31_1">
@@ -363,22 +364,15 @@
                         <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.streetNumber" name="label15_1"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow33">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn78">
-                        <wm-label padding="unset 0.5em" caption="Unit Number" name="label17"></wm-label>
+                <wm-gridrow name="gridrow31_1">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn74_1">
+                        <wm-label padding="unset 0.5em" caption="Directional Prefix" name="label14_1"></wm-label>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn79">
-                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.unitNumber" name="label20"></wm-label>
-                    </wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow74">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn153">
-                        <wm-label padding="unset 0.5em" name="label40" caption="Street Direction"></wm-label>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn154">
-                        <wm-label padding="unset 0.5em" name="label48" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.streetDirection"></wm-label>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn75_1">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.directionalPrefix" name="label15_1"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
+
                 <wm-gridrow name="gridrow32">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn76">
                         <wm-label padding="unset 0.5em" caption="Street Name" name="label16"></wm-label>
@@ -395,6 +389,23 @@
                         <wm-label padding="unset 0.5em" name="label49" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.streetType"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow31_1">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn74_1">
+                        <wm-label padding="unset 0.5em" caption="Directional Suffix" name="label14_1"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn75_1">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.directionalSuffix" name="label15_1"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow33">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn78">
+                        <wm-label padding="unset 0.5em" caption="Unit Number" name="label17"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn79">
+                        <wm-label padding="unset 0.5em" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.unitNumber" name="label20"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+
                 <wm-gridrow name="gridrow72">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn149">
                         <wm-label padding="unset 0.5em" name="label38" caption="City"></wm-label>
@@ -449,6 +460,54 @@
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn152">
                         <wm-label padding="unset 0.5em" name="label56" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.inspectionZone"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow73">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn151">
+                        <wm-label padding="unset 0.5em" name="label39" caption="Zoning Classification" hint="bind:Widgets.gridLocation.selecteditem.gisrecords.zoningClassification"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn152">
+                        <wm-label padding="unset 0.5em" name="label56" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.zoningClassification"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow73">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn151">
+                        <wm-label padding="unset 0.5em" name="label39" caption="Flood Zone" hint="bind:Widgets.gridLocation.selecteditem.gisrecords.floodZone"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn152">
+                        <wm-label padding="unset 0.5em" name="label56" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.floodZone"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow73">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn151">
+                        <wm-label padding="unset 0.5em" name="label39" caption="Flood Plain" hint="bind:Widgets.gridLocation.selecteditem.gisrecords.floodPlain"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn152">
+                        <wm-label padding="unset 0.5em" name="label56" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.floodPlain"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow73">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn151">
+                        <wm-label padding="unset 0.5em" name="label39" caption="Flood Map Panel" hint="bind:Widgets.gridLocation.selecteditem.gisrecords.floodMapPanel"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn152">
+                        <wm-label padding="unset 0.5em" name="label56" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.floodMapPanel"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow73">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn151">
+                        <wm-label padding="unset 0.5em" name="label39" caption="Use" hint="bind:Widgets.gridLocation.selecteditem.gisrecords.usedFor"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn152">
+                        <wm-label padding="unset 0.5em" name="label56" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.usedFor"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow73">
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn151">
+                        <wm-label padding="unset 0.5em" name="label39" caption="Is Hostile?" hint="bind:Widgets.gridLocation.selecteditem.gisrecords.isHostile"></wm-label>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn152">
+                        <wm-label padding="unset 0.5em" name="label56" caption="bind:Widgets.gridLocation.selecteditem.gisrecords.isHostile"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow45_1">
