--- a/src/main/webapp/pages/ManageInspections/ManageInspections.html
+++ b/src/main/webapp/pages/ManageInspections/ManageInspections.html
@@ -147,9 +147,9 @@
                 filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
                     <wm-grid-column binding="inspectionDesign.inspectDesignName" caption="Inspection" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionDesign"></wm-grid-column>
                     <wm-grid-column binding="inspectionDesign.description" caption="Description" type="text" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionDesign"></wm-grid-column>
-                    <wm-grid-column binding="inspectionDesign.createdAt" caption="Date Created" type="timestamp" generator="assigned" readonly="true" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp" show="true"
-                    filterwidget="date" related-entity-name="InspectionDesign"></wm-grid-column>
-                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                    <wm-grid-column binding="inspectionDesign.createdAt" caption="Date Created" type="timestamp" generator="assigned" readonly="true" edit-widget-type="timestamp" show="true" filterwidget="date" related-entity-name="InspectionDesign">{{row.getProperty('inspectionDesign.createdAt') | toLocalDateString:true}}</wm-grid-column>
+                    <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false"
+                    searchable="false" show="true"></wm-grid-column>
                     <wm-grid-action key="addNewRow" display-name="Add Inspection" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Inspection" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                     <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="Variables.ngGoToInspection.invoke()" disabled="false"></wm-grid-row-action>
                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
@@ -159,9 +159,8 @@
                     <wm-layoutgrid columns="1" name="layoutgrid6">
                         <wm-gridrow name="gridrow12">
                             <wm-gridcolumn columnwidth="12" name="gridcolumn15">
-                                <wm-form-field name="inspectionDesign" displayname="Which inspection would you like to add to this category?" show="true" primary-key="false" generator="assigned" key="inspectionDesign" type="list" is-related="true" readonly="false"
-                                required="true" widget="select" dataset="bind:Variables.lvGetInspectionDesigns.dataSet" datafield="All Fields" displayfield="inspectDesignName" defaultvalue="bind:Variables.lvGetInspectionDesigns.firstRecord" placeholder="Select value"
-                                orderby="inspectDesignName:asc"></wm-form-field>
+                                <wm-form-field name="inspectionDesign" displayname="Select Inspection" show="true" primary-key="false" generator="assigned" key="inspectionDesign" type="list" is-related="true" readonly="false" required="true" widget="select"
+                                dataset="bind:Variables.lvGetInspectionDesigns.dataSet" datafield="All Fields" displayfield="inspectDesignName" defaultvalue="bind:Variables.lvGetInspectionDesigns.firstRecord" placeholder="Select value" orderby="inspectDesignName:asc"></wm-form-field>
                             </wm-gridcolumn>
                         </wm-gridrow>
                     </wm-layoutgrid>
