text cleanup Files modified - [EditForm]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -354,13 +354,13 @@
                                                     <wm-layoutgrid columns="1" name="layoutgrid9">
                                                         <wm-gridrow name="gridrow80">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn111_2">
-                                                                <wm-form-field displayname="Would you like to add this form to a public-facing or internal-only category?" widget="select" show="true" type="custom" name="selectCategoryType" dataset="Public,Internal"
+                                                                <wm-form-field displayname="Would you like to add this form to a public or internal-only category?" widget="select" show="true" type="custom" name="selectCategoryType" dataset="Public,Internal"
                                                                 defaultvalue="Public" required="true"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow37">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn62">
-                                                                <wm-form-field name="formCategories" displayname="What category does this form belong in?" show="true" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true"
+                                                                <wm-form-field name="formCategories" displayname="Which category would you like to assign to the form?" show="true" primary-key="false" generator="assigned" key="formCategories" type="list" is-related="true"
                                                                 readonly="false" required="true" widget="select" dataset="bind:Variables.Categories.dataSet" datafield="All Fields" displayfield="category" orderby="category:asc" placeholder="Select Category"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
