--- a/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
+++ b/src/main/webapp/pages/MunicipalitySettings/MunicipalitySettings.html
@@ -76,8 +76,7 @@
                                         <wm-composite name="composite6">
                                             <wm-label class="col-md-3 form-control-static" name="label7" caption="State" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container6">
-                                                <wm-select name="textState" datavalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].stateId" dataset="bind:Variables.AllSates.dataSet" searchkey="stateName" displaylabel="stateName" datafield="id"
-                                                orderby="stateName:asc" displayfield="stateName"></wm-select>
+                                                <wm-select name="textState" datavalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].stateId" dataset="bind:Variables.AllSates.dataSet" searchkey="stateName" displaylabel="stateName" datafield="id" orderby="stateName:asc" displayfield="stateName"></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
@@ -180,144 +179,17 @@
     <wm-view class="dialog-view" name="view1">
         <wm-dialog dialogtype="design-dialog" modal="true" title="Upload Logo" iconclass="wi wi-upload" name="dialog1" on-opened="dialog1Opened($event, $scope)">
             <wm-dialogactions name="dialogactions1">
-                <wm-button class="btn-raised btn-primary" caption="Upload" name="button4" on-click="Widgets.liveformUpdateLogo.save()" iconclass="wi wi-upload"></wm-button>
+                <wm-button class="btn-raised btn-primary" caption="Upload" on-click="buttonSaveClick()" name="button4" iconclass="wi wi-upload"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="button5_1" on-click="Widgets.dialog1.close()" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
-            <wm-liveform novalidate="false" errormessage="" title="" iconclass="" defaultmode="Edit" dataset="bind:Variables.UpdateLogoMunicipalities.dataSet" captionalign="left" captionposition="top" name="liveformUpdateLogo">
-                <wm-layoutgrid columns="1" name="layoutgrid5">
-                    <wm-gridrow name="gridrow17">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn37_2">
-                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="false" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                            defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].municipalityGuid"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow18">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn38">
-                            <wm-form-field name="municipalityName" displayname="Municipality Name" show="false" primary-key="false" generator="assigned" key="municipalityName" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
-                            defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].municipalityName"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow19">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn39">
-                            <wm-form-field name="address1" displayname="Address1" show="false" primary-key="false" generator="assigned" key="address1" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].address1"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow20">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn40">
-                            <wm-form-field name="address2" displayname="Address2" show="false" primary-key="false" generator="assigned" key="address2" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].address2"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow21">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn41">
-                            <wm-form-field name="city" displayname="City" show="false" primary-key="false" generator="assigned" key="city" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].city"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow22">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn42">
-                            <wm-form-field name="postalCode" displayname="Postal Code" show="false" primary-key="false" generator="assigned" key="postalCode" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].postalCode"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow23">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn43">
-                            <wm-form-field name="phone" displayname="Phone" show="false" primary-key="false" generator="assigned" key="phone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].phone"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow24">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn44">
-                            <wm-form-field name="email" displayname="Email" show="false" primary-key="false" generator="assigned" key="email" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].email"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow25">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn45">
-                            <wm-form-field name="allowManualPayment" displayname="Allow Manual Payment" show="false" primary-key="false" generator="assigned" key="allowManualPayment" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].allowManualPayment"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow26">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn46">
-                            <wm-form-field name="manualPaymentPercent" displayname="Manual Payment Percent" show="false" primary-key="false" generator="assigned" key="manualPaymentPercent" type="integer" step="0" widget="number" inputtype="number" placeholder="Enter value"
-                            defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].manualPaymentPercent"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow27">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn47">
-                            <wm-form-field name="active" displayname="Active" show="false" primary-key="false" generator="assigned" key="active" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].active"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow28">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn48">
-                            <wm-form-field name="globalEmailSig" displayname="Global Email Sig" show="false" primary-key="false" generator="assigned" key="globalEmailSig" type="string" widget="text" maxchars="500" inputtype="text" placeholder="Enter value"
-                            defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].globalEmailSig"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow40_3">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn52_3">
-                            <wm-label padding="unset 0.5em" name="label15" caption="For the best results, please use an image with a transparent background."></wm-label>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow29">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn49" horizontalalign="left">
-                            <wm-picture name="picture2" width="100" height="100"></wm-picture>
-                            <wm-form-field name="logo" show="true" primary-key="false" generator="assigned" key="logo" type="blob" widget="upload" maxchars="255" filetype="image"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow30">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn50">
-                            <wm-form-field name="mondayYn" displayname="Monday Yn" show="false" primary-key="false" generator="assigned" key="mondayYn" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].mondayYn"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow31">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn51">
-                            <wm-form-field name="tuesdayYn" displayname="Tuesday Yn" show="false" primary-key="false" generator="assigned" key="tuesdayYn" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].tuesdayYn"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow32">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn52">
-                            <wm-form-field name="wednesdayYn" displayname="Wednesday Yn" show="false" primary-key="false" generator="assigned" key="wednesdayYn" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].wednesdayYn"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow33">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn53">
-                            <wm-form-field name="thursdayYn" displayname="Thursday Yn" show="false" primary-key="false" generator="assigned" key="thursdayYn" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].thursdayYn"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow34">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn54">
-                            <wm-form-field name="fridayYn" displayname="Friday Yn" show="false" primary-key="false" generator="assigned" key="fridayYn" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].fridayYn"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow35">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn55">
-                            <wm-form-field name="saturdayYn" displayname="Saturday Yn" show="false" primary-key="false" generator="assigned" key="saturdayYn" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].saturdayYn"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow36">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn56">
-                            <wm-form-field name="sundayYn" displayname="Sunday Yn" show="false" primary-key="false" generator="assigned" key="sundayYn" type="boolean" widget="checkbox" placeholder="" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].sundayYn"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow37">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn57">
-                            <wm-form-field name="timeZone" displayname="Time Zone" show="false" primary-key="false" generator="assigned" key="timeZone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].timeZone"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow38">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn58">
-                            <wm-form-field name="openTime" displayname="Open Time" show="false" primary-key="false" generator="assigned" key="openTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].openTime"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow39">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn59">
-                            <wm-form-field name="closeTime" displayname="Close Time" show="false" primary-key="false" generator="assigned" key="closeTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].closeTime"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                    <wm-gridrow name="gridrow40">
-                        <wm-gridcolumn columnwidth="12" name="gridcolumn60">
-                            <wm-form-field name="states" displayname="States" show="false" primary-key="false" generator="assigned" key="states" type="list" is-related="true" widget="select" placeholder="Select value" defaultvalue="bind:Variables.SelectedMunicipalityObj.dataSet.data[$i].states"></wm-form-field>
-                        </wm-gridcolumn>
-                    </wm-gridrow>
-                </wm-layoutgrid>
-                <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="readonly" required="required" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
-            </wm-liveform>
+            <wm-layoutgrid columns="1" name="layoutgrid5">
+                <wm-gridrow name="gridrow29">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn49" horizontalalign="left">
+                        <wm-picture name="picture2" width="100" height="100"></wm-picture>
+                        <input name="logo" type="file" generator="assigned" ng-file-model="newMunicipalityLogo" filetype="image/*">
+                    </wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
         </wm-dialog>
     </wm-view>
 </wm-page>
