--- a/src/main/webapp/pages/_viewInspection/_viewInspection.html
+++ b/src/main/webapp/pages/_viewInspection/_viewInspection.html
@@ -672,7 +672,7 @@
                                 <wm-composite name="composite5_1">
                                     <wm-label class="col-md-3 control-label" name="label72" caption="Code Set"></wm-label>
                                     <wm-container class="col-md-9" name="container13_1">
-                                        <wm-select name="selectCodeSet" dataset="bind:Variables.lvCodeSets.dataSet.data[$i].codeSets" datafield="All Fields" displayfield="codeSetTitle"></wm-select>
+                                        <wm-select name="selectCodeSet" dataset="bind:Variables.lvCodeSets.dataSet.data[$i].codeSets" datafield="All Fields" displayfield="codeSetTitle" datavalue="bind:Variables.lvCodeSets.firstRecord.codeSets"></wm-select>
                                     </wm-container>
                                 </wm-composite>
                             </wm-gridcolumn>
